--- a/empresa/css/style.css
+++ b/empresa/css/style.css
@@ -6,6 +6,12 @@
     margin: 0;
 }
 
+header {
+    position: fixed;
+    width: 100vw;
+    z-index: 2;
+}
+
 .nav-itens-pai a {
     font-size: 1rem;
     text-decoration: none;
@@ -31,6 +37,10 @@
     background-color: white;
 }
 
+.carousel {
+    z-index: 1;
+}
+
 .carousel-item img {
     border-radius: 0px 0px 2rem 2rem;
     margin-top: 0;
@@ -38,10 +48,11 @@
 
 .orquideas {
     width: 100vw;
-    max-width: 100vw;
+    max-width: 100%;
     position: fixed;
-    z-index: 1;
-    margin-top: 1rem;
+    z-index: 0;
+    margin-top: -42%;
+
 }
 
 .produtos {
@@ -84,8 +95,9 @@ footer {
     height: 100%;
     display: flex;
     justify-content: center;
+    position: relative;
+    z-index: 1;
 }
-
 
 .textorodape {
     color: white;
@@ -99,7 +111,7 @@ footer {
     color: #AB136A;
     text-align: center;
     margin-bottom: 2rem;
-    font-size: 3rem;
+    font-size: 5vw;
 }
 
 body {
@@ -124,8 +136,8 @@ main {
     display: flex;
     padding: 0.25rem;
     color: #AB136A;
-    font-size: 25px;
-    ;
+    font-size: 2.6vw;
+
 }
 
 .textoMOBILE {
@@ -139,6 +151,29 @@ main {
 }
 
 .secaoIMG {
+    display: none;
+}
+
+.imagensPC img {
+    width: 12vw;
+    height: auto;
+    margin: 1vw;
+    margin-bottom: 0;
+    border-radius: 2vw;
+    margin-bottom: 10px;
+    z-index: 5;
+}
+
+.imagensPC {
+    height: auto;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    z-index: 5;
+}
+
+.br400 {
     display: none;
 }
 
@@ -167,6 +202,25 @@ main {
 
     }
 
+    .imagensPC img {
+        width: 14vw;
+        height: auto;
+        margin: 0.5vw;
+        margin-bottom: 0;
+        border-radius: 2vw;
+        margin-bottom: 1vw;
+        z-index: 1;
+    }
+
+    .imagensPC {
+        height: auto;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        z-index: 1;
+    }
+
 }
 
 @media only screen and (max-width: 600px) {
@@ -174,6 +228,10 @@ main {
     .nav-itens-pai a {
         font-size: 0.8rem;
         margin: 0.2rem;
+    }
+
+    .conteiner {
+        margin-top: 0;
     }
 
     .ativo {
@@ -204,6 +262,7 @@ main {
     .produtos {
 
         margin-top: -1.5rem;
+        margin-bottom: 0;
         z-index: 1;
         position: relative;
         font-size: 1rem;
@@ -221,11 +280,11 @@ main {
 
     .textoMOBILE {
         text-indent: 18px;
+        text-align: center;
         display: flex;
         padding: 0.25rem;
         color: #AB136A;
-        font-size: 15px;
-        ;
+        font-size: 3vw;
     }
 
     .textoPC {
@@ -235,6 +294,7 @@ main {
     .titulo {
         color: #AB136A;
         text-align: center;
+        margin-top: 0;
         margin-bottom: 1rem;
         font-size: 1.8rem;
     }
@@ -248,12 +308,17 @@ main {
         justify-content: space-between;
     }
 
+    .imagensPC {
+        display: none;
+    }
+
     .secaoIMG img {
-        width: 125px;
+        width: 30vw;
         height: auto;
-        margin: 5px;
+        margin: 1vw;
         margin-bottom: 0;
-        border-radius: 15%;
+        border-radius: 5vw;
+        margin-bottom: 10px;
     }
 
     .secaoIMG {
@@ -262,6 +327,15 @@ main {
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
+        z-index: 5;
+    }
+
+    br {
+        display: none;
+    }
+
+    .brObjetivo {
+        display: flex;
     }
 
 }
@@ -288,19 +362,6 @@ main {
         width: 20%;
     }
 
-    .textoMOBILE {
-        text-indent: 18px;
-        justify-content: center;
-        display: flex;
-        padding: 0.25rem;
-        color: #AB136A;
-        font-size: 10px;
-        ;
-    }
-
-    .textoPC {
-        display: none;
-    }
 
     .produtos {
         padding-top: 0.5rem;
@@ -326,19 +387,22 @@ main {
 
     }
 
-    .imagens {
-        display: flex;
-    }
-
-    .secaoIMG img {
-        border-radius: 50%;
-        margin: 10px;
-
-    }
-
     .secaoIMG {
         display: flex;
         justify-content: center;
+        z-index: 5;
+    }
+
+    .textoMOBILE {
+        font-size: 4vw;
+    }
+
+    .titulo {
+        font-size: 6.5vw;
+    }
+
+    .br400 {
+        display: block;
     }
 }
 
@@ -357,10 +421,38 @@ main {
 
     }
 
+    .titulo {
+        font-size: 6vw;
+    }
+
+    .textoMOBILE {
+        font-size: 3.5vw;
+    }
+
 }
 
 @media only screen and (max-width: 340px) {
     .orquideas {
         display: none;
+    }
+
+    .titulo {
+        font-size: 7vw;
+    }
+
+    .textoMOBILE {
+        font-size: 3.5vw;
+        text-align: justify;
+    }
+}
+
+
+@media only screen and (max-width: 320px) {
+    .textoMOBILE {
+        font-size: 4vw;
+    }
+
+    .titulo {
+        font-size: 6.5vw;
     }
 }
